# kinova-ros

kinova_control/config/: j2n6s300_control.yaml
kinova_control/launch/: kinova_control.launch
kinova_control/src/: move_robot.py
kinova_description/launch/: jaco_rviz.launch
kinova_description/rviz/: j2n6s300.rviz
kinova_description/urdf/: j2n6s200_standalone.xacro  j2n6s300.xacro  j2n6s300_circle1.urdf  j2n6s300_circle2.urdf  j2n6s300_standalone.urdf  j2n6s300_standalone.xacro  kinova.gazebo  kinova_common.xacro  passive_ee.xacro
kinova_driver/include/kinova_driver/: kinova_arm.h  kinova_comm.h  kinova_joint_trajectory_controller.h
kinova_driver/src/: kinova_arm.cpp  kinova_comm.cpp  kinova_joint_trajectory_controller.cpp
kinova_gazebo/: CMakeLists.txt  package.xml
kinova_gazebo/fast_joints_plugin/: CMakeLists.txt
kinova_gazebo/fast_joints_plugin/include/: fast_joints_plugin.hpp
kinova_gazebo/fast_joints_plugin/src/: fast_joints_plugin.cpp
kinova_gazebo/launch/: robot_launch.launch
kinova_gazebo/worlds/: jaco.world
kinova_moveit/robot_configs/j2n6s300_moveit_config/config/: j2n6s300.srdf  joint_limits.yaml  joint_names.yaml
kinova_moveit/robot_configs/j2n6s300_moveit_config/launch/: moveit.rviz
kinova_msgs/: CMakeLists.txt  package.xml
kinova_msgs/msg/: JoystickCommand.msg
kinova_ros_control/: CMakeLists.txt  package.xml  robot_hw_sim_plugins.xml
kinova_ros_control/include/kinova_ros_control/: default_robot_hw_sim.h  kinova_ros_control_plugin.h  robot_hw_sim.h
kinova_ros_control/src/: default_robot_hw_sim.cpp  kinova_ros_control_plugin.cpp
