<package>
  <name>kinova_gazebo</name>
  <version>0.0.0</version>
  <description>kinova_gazebo</description>
  <maintainer email="support@kinova.ca">Kinova Support</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/Kinovarobotics/kinova-ros</url> 
  <url type="repository">https://github.com/Kinovarobotics/kinova-ros</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>kinova_control</run_depend>
  <run_depend>kinova_description</run_depend>
  <run_depend>xacro</run_depend>

    <!-- Build and Install -->
  <build_depend>fast_joints_plugin</build_depend>
  <run_depend>fast_joints_plugin</run_depend>

  <export>
    <!-- Declare the launch file to launch the Gazebo simulation -->
    <launch file="launch/robot_launch.launch" />

    <!-- Declare the Gazebo plugins -->
    <gazebo plugin="${prefix}/lib/fast_joints_plugin/libfast_joints_plugin.so" />
  </export>
</package>
