<?xml version="1.0"?>
<package format="2">
  <name>kinova_ros_control</name>
  <version>2.9.2</version>
  <description>kinova_ros_control</description>

  <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernández Cordero</maintainer>
  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>

  <license>BSD</license>



  <author>Jonathan Bohren</author>
  <author>Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
  <depend>angles</depend>

  <export>
    <kinova_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/>
  </export>
</package>